--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,33 +5,37 @@
   <title>Odd Duck Products</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-  
+
   <main class="grid-container">
-    <div class="grid-item1" style="background-color: #060505"> 
+    <div class="grid-item1" style="background-color: #060505">
       <h1 data-text="Odd Duck Products...">Odd Duck Products...
-    </div> 
-    <div class="grid-item2" style="background-color: #060505">
-      <button id="show-results-btn">View Results</button>
-      <ul id="results-container"></ul>
     </div>
-    <section id="img-container" class="grid-item3"    style="background-color: #060505"> 
+    <div class="grid-item2" style="background-color: #060505">
+    </div>
+    <section id="img-container" class="grid-item3" style="background-color: #060505">
       <img id="img-one" src="" alt="">
       <img id="img-two" src="" alt="">
       <img id="img-three" src="" alt="">
     </section>
-    <div class="grid-item4" style="background-color: #060505"> </div>
- 
- 
+    <div class="grid-item4" style="background-color: #060505"> 
+      <button id="show-results-btn">View Results</button>
+      <section id="results-container"></section>
+      <canvas id="chart"></canvas>
+    </div>
+    <div class="grid-item5" style="background-color: #060505"></div>
   </main>
-  <footer></footer>
-  <script src="js/app.js"></script>
+  <footer>
+  
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
