--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
   <main class="grid-container">
     <div class="grid-item1" style="background-color: #060505">
-      <h1 data-text="Odd Duck Products...">Odd Duck Products...
+      <h1 data-text="Odd Duck Products...">Odd Duck Products... </h1>
     </div>
-    <div class="grid-item2" style="background-color: #060505">
+    <div class="grid-item2" style="background-color: #968989">
+      <h2>Choose your Hero:</h2>
     </div>
     <section id="img-container" class="grid-item3" style="background-color: #060505">
       <img id="img-one" src="" alt="">
@@ -29,7 +30,6 @@
       <section id="results-container"></section>
       <canvas id="chart"></canvas>
     </div>
-    <div class="grid-item5" style="background-color: #060505"></div>
   </main>
   <footer>
   
