--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 data-text="Odd Duck Products...">Odd Duck Products... </h1>
     </div>
     <div class="grid-item2" style="background-color: #968989">
-      <h2>Choose your Hero:</h2>
+      <h2>Choose Your Hero:</h2>
     </div>
     <section id="img-container" class="grid-item3" style="background-color: #060505">
       <img id="img-one" src="" alt="">
