--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
